[gd_scene load_steps=5 format=2]

[ext_resource path="res://Robot/Drone/Drone.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 144, 16 )

[node name="Drone" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 24 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( 16, 24 )

[node name="AttackArea" type="Area2D" parent="Sprite"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0
monitorable = false

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 16, 0 )
shape = SubResource( 2 )

[node name="TurnDetector" type="RayCast2D" parent="Sprite"]
unique_name_in_owner = true
position = Vector2( 9, 8 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CooldownTimer" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 16, 16 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="Sprite/AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
